# GridEvol

./: .gitignore  .gitmodules  CMakeLists.txt
GridEvol/: CMakeLists.txt  Controller.hpp
GridEvol/Mains/: Controller.cpp  NeuralNetMain.cpp  RunControllerMain.cpp
GridEvol/Sources/: Controller.cpp  Controller.h  GridSimulation.cpp  GridSimulation.h  HippocratesNets.cpp  HippocratesNets.h  Nets.h  Norm.cpp  Norm.h  Normalizable.cpp  Normalizable.h  Simulation.h
GridEvol/Tests/: EntityTest.cpp  GridSimulationTest.cpp  GridTest.cpp  NormTest.cpp  NormalizableTest.cpp
